Added missing commit files for adopter statistics

--- a/etc/custom.properties
+++ b/etc/custom.properties
@@ -126,31 +126,31 @@ org.opencastproject.download.directory=${org.opencastproject.storage.dir}/downlo
 # Relational Database configuration.  By default, Opencast uses an embedded H2 database.  A standalone database server
 # is recommended for production systems.  If you run the ddl script for your db vendor (see docs/scripts/ddl/) manually,
 # (this is recommended) set 'ddl-generation' to 'false'.
-org.opencastproject.db.ddl.generation=true
+org.opencastproject.db.ddl.generation=false
 
 # db.vendor can be any of the values listed at under the "eclipselink.target-database" section of
 # http://www.eclipse.org/eclipselink/documentation/2.4/jpa/extensions/p_target_database.htm#target-database
 # Common values include MySQL, PostgreSQL.
-#org.opencastproject.db.vendor=MySQL
+org.opencastproject.db.vendor=MySQL
 
 # Opencast comes with the jdbc drivers for MySQL (com.mysql.jdbc.Driver) and PostgreSQL (org.postgresql.Driver). To add
 # other jdbcDrivers to the Opencast runtime, rebuild the db module with your desired drivers.
-#org.opencastproject.db.jdbc.driver=com.mysql.jdbc.Driver
+org.opencastproject.db.jdbc.driver=com.mysql.jdbc.Driver
 
 # The jdbc connection url, username, and password
-#org.opencastproject.db.jdbc.url=jdbc:mysql://localhost/opencast
-#org.opencastproject.db.jdbc.user=opencast
-#org.opencastproject.db.jdbc.pass=dbpassword
+org.opencastproject.db.jdbc.url=jdbc:mysql://localhost/opencast
+org.opencastproject.db.jdbc.user=opencast
+org.opencastproject.db.jdbc.pass=dbpassword
 
 # The jdbc connection pool properties. See http://www.mchange.com/projects/c3p0/#basic_pool_configuration
 # max.idle.time should be lower than the database server idle connection timeout duration (wait_timeout for mysql)
-#org.opencastproject.db.jdbc.pool.max.size=15
-#org.opencastproject.db.jdbc.pool.min.size=3
-#org.opencastproject.db.jdbc.pool.acquire.increment=3
-#org.opencastproject.db.jdbc.pool.max.statements=0
-#org.opencastproject.db.jdbc.pool.login.timeout=1000
-#org.opencastproject.db.jdbc.pool.max.idle.time=3600
-#org.opencastproject.db.jdbc.pool.max.connection.age=0
+org.opencastproject.db.jdbc.pool.max.size=15
+org.opencastproject.db.jdbc.pool.min.size=3
+org.opencastproject.db.jdbc.pool.acquire.increment=3
+org.opencastproject.db.jdbc.pool.max.statements=0
+org.opencastproject.db.jdbc.pool.login.timeout=1000
+org.opencastproject.db.jdbc.pool.max.idle.time=3600
+org.opencastproject.db.jdbc.pool.max.connection.age=0
 
 
 ######### Workspace Cleanup #########
