--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,8 @@
     <module>modules/fileupload</module>
     <module>modules/hello-world-api</module>
     <module>modules/hello-world-impl</module>
+    <module>modules/adopter-statistics-api</module>
+    <module>modules/adopter-statistics-impl</module>
     <module>modules/incident-workflowoperation</module>
     <module>modules/index-service</module>
     <module>modules/ingest-download-service-api</module>
