--- a/modules/adopter-statistics-api/pom.xml
+++ b/modules/adopter-statistics-api/pom.xml
@@ -28,7 +28,7 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Build-Number>${buildNumber}</Build-Number>
-            <Export-Package>org.opencastproject.adopterstatistics;version=${project.version}
+            <Export-Package>org.opencastproject.adopter;version=${project.version}
             </Export-Package>
           </instructions>
         </configuration>
