Download button in theodul player

--- a/etc/ui-config/mh_default_org/theodul/config.yml
+++ b/etc/ui-config/mh_default_org/theodul/config.yml
@@ -65,6 +65,18 @@ link_mediamodule: true
 # Default: false
 show_embed_links: true
 
+# Shows/Hides the download tab under the theodul player.
+# In order to show up, the user also needs a role that matches the
+# regex in the following configuration 'allowed_roles_for_video_download'
+# Allowed values: true, false
+# Default: false
+allow_video_download: false
+
+# Configures the roles that are allowed to see the download plugin
+# Allowed values: regular expressions (if any role of the user matches this regex, the download tab will be shown)
+# Default: ROLE_ADMIN
+allowed_roles_for_video_download: ROLE_ADMIN
+
 # Shortcut definitions for the html5 player
 # - modifier keys
 #   - shift
